metallb/nginx/nginx-001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-001
  name: nginx-001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-001
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-001
    spec:
      volumes:
      - name: shared-volume
        emptyDir:
          sizeLimit: 256Mi
      containers:
      - name: change-index-html
        image: alpine:latest
        args:
          - sh
          - -c
          - echo '<h1>Eu sou o Nginx 001!</h1>' > /usr/share/nginx/html/index.html; sleep 36000
        volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.3"
          requests:
            memory: "64Mi"
            cpu: "0.1"
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.3"
          requests:
            memory: "64Mi"
            cpu: "0.1"
