metallb/nginx/nginx-001-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-001
  labels:
    app: nginx-001
spec:
  selector:
    app: nginx-001
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tcp-app
  type: ClusterIP
