metallb/nginx/nginx-003-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-003
  labels:
    app: nginx-003
spec:
  selector:
    app: nginx-003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: tcp-app
  type: ClusterIP
