metallb/nginx/nginx-003-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-003
spec:
  ingressClassName: nginx
  rules:
  - host: nginx003.mxjrlab.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-003
            port:
              number: 80
